--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
                                     </div>
                                     <div class="live-box text-center mt-4">                                        
                                         <div>
-                                            <a class="btn btn-danger live-btn" href="file:///C:/Users/HP/Desktop/Graduation Project Website/main/doctor login page.html" aria-expanded="false"><span class="hide-menu"><b>Doctor</b></span></a>
+                                            <a class="btn btn-danger live-btn" href="/doctor login page.html" aria-expanded="false"><span class="hide-menu"><b>Doctor</b></span></a>
                                         </div>
                                     </div> 
                                     
                                     <div class="live-box text-center mt-4">                                        
                                         <div>
-                                            <a class="btn btn-danger live-btn" href="file:///C:/Users/HP/Desktop/Graduation Project Website/main/admin login page.html" aria-expanded="false"><span class="hide-menu"><b>Admin</b></span></a>
+                                            <a class="btn btn-danger live-btn" href="/admin login page.html" aria-expanded="false"><span class="hide-menu"><b>Admin</b></span></a>
                                             
                                         </div>
                                     </div> 
