Update admin login page.html

--- a/admin login page.html
+++ b/admin login page.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="file:///C:/Users/HP/Desktop/Graduation Project Website/html/index.html">
+    <link rel="icon" type="image/png" sizes="16x16" href="/html/index.html">
     <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/image_2.png">
     <title>Graduation project</title>
     <!-- Custom CSS -->
@@ -86,7 +86,7 @@
                                     <script src="js/login.js"></script>
                                     <div class="live-box text-center mt-4">                                        
                                         <div>
-                                            <a class="btn btn-danger live-btn" href="file:///C:/Users/HP/Desktop/Graduation Project Website/html/admin-add new patient.html" aria-expanded="false"><span class="hide-menu"><b>Login</b></span></a>
+                                            <a class="btn btn-danger live-btn" href="/html/admin-add new patient.html" aria-expanded="false"><span class="hide-menu"><b>Login</b></span></a>
                                             
                                         </div>
                                     </div> 
