Update admin login page.html

--- a/admin login page.html
+++ b/admin login page.html
@@ -86,7 +86,7 @@
                                     <script src="js/login.js"></script>
                                     <div class="live-box text-center mt-4">                                        
                                         <div>
-                                            <a class="btn btn-danger live-btn" href="/html/admin-add new patient.html" aria-expanded="false"><span class="hide-menu"><b>Login</b></span></a>
+                                            <a class="btn btn-danger live-btn" href="html/admin-add new patient.html" aria-expanded="false"><span class="hide-menu"><b>Login</b></span></a>
                                             
                                         </div>
                                     </div> 
