--- a/html/table-basic.html
+++ b/html/table-basic.html
@@ -65,7 +65,7 @@
                                 <input type="text" class="form-control" placeholder="Search & enter"> <a class="srh-btn"><i class="fa fa-times"></i></a> </form>
                         </li>
                     </ul>
-                    <div class="navbar-header", style=" padding-right: 500px">
+                    <div class="navbar-header">
                         <a class="navbar-brand" href="index.html">
                             <!-- Logo icon --><b>
 
