--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,19 @@
                 <!-- ============================================================== -->
                 <!-- Logo -->
                 <!-- ============================================================== -->
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="index.html" >
+                        <!-- Logo icon --><b>
+                            <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
+                            <!-- Dark Logo icon -->
+                            <img src="../assets/images/image_2.png" alt="homepage" class="dark-logo" />
+                            <!-- Light Logo icon -->
+                            <img src="../assets/images/image_2.png" alt="homepage" class="light-logo" />
+                        </b>
+                        <!--End Logo icon -->
+                           <b>Doctor Portal </b></a>
 
+                </div>
                 <!-- ============================================================== -->
                 <!-- End Logo -->
                 <!-- ============================================================== -->
@@ -73,19 +85,7 @@
                                 <input type="text" class="form-control" placeholder="Search & enter"> <a class="srh-btn"><i class="fa fa-times"></i></a></form>
                         </li>
                     </ul>
-                    <div class="navbar-header" style=" padding-right: 500px">
-                        <a class="navbar-brand" href="index.html" >
-                            <!-- Logo icon --><b>
-                                <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
-                                <!-- Dark Logo icon -->
-                                <img src="../assets/images/image_2.png" alt="homepage" class="dark-logo" />
-                                <!-- Light Logo icon -->
-                                <img src="../assets/images/image_2.png" alt="homepage" class="light-logo" />
-                            </b>
-                            <!--End Logo icon -->
-                               <b>Doctor Portal </b></a>
 
-                    </div>
                     <!-- ============================================================== -->
                     <!-- User profile and search -->
                     <!-- ============================================================== -->
@@ -94,7 +94,7 @@
                         <!-- Profile -->
                         <!-- ============================================================== -->
                         <li class="nav-item dropdown u-pro">
-                            <a class="btn btn-danger live-btn" href="file:///C:/Users/HP/Desktop/Graduation Project Website/main/index.html" aria-expanded="false"><span class="hide-menu"><b>Logout</b></span></a>
+                            <a class="btn btn-danger live-btn" href="/index.html" aria-esxpanded="false"><span class="hide-menu"><b>Logout</b></span></a>
                         </li>
                     </ul>
                 </div>
