--- a/html/table-basic.html
+++ b/html/table-basic.html
@@ -47,7 +47,19 @@
                 <!-- ============================================================== -->
                 <!-- Logo -->
                 <!-- ============================================================== -->
+                <div class="navbar-header" style=" float: center">
+                    <a class="navbar-brand" href="index.html">
+                        <!-- Logo icon --><b>
 
+                            <!-- Dark Logo icon -->
+                            <img src="../assets/images/image_2.png" alt="homepage" class="dark-logo" />
+                            <!-- Light Logo icon -->
+                            <img src="../assets/images/image_2.png" alt="homepage" class="light-logo" />
+                        </b>
+
+                        <!-- Logo text -->
+                    <b>Doctor Portal</b></a>
+                </div>
                 <!-- ============================================================== -->
                 <!-- End Logo -->
                 <!-- ============================================================== -->
@@ -65,19 +77,7 @@
                                 <input type="text" class="form-control" placeholder="Search & enter"> <a class="srh-btn"><i class="fa fa-times"></i></a> </form>
                         </li>
                     </ul>
-                    <div class="navbar-header">
-                        <a class="navbar-brand" href="index.html">
-                            <!-- Logo icon --><b>
 
-                                <!-- Dark Logo icon -->
-                                <img src="../assets/images/image_2.png" alt="homepage" class="dark-logo" />
-                                <!-- Light Logo icon -->
-                                <img src="../assets/images/image_2.png" alt="homepage" class="light-logo" />
-                            </b>
-
-                            <!-- Logo text -->
-                        <b>Doctor Portal</b></a>
-                    </div>
                     <!-- ============================================================== -->
                     <!-- User profile and search -->
                     <!-- ============================================================== -->
@@ -86,7 +86,7 @@
                         <!-- Profile -->
                         <!-- ============================================================== -->
                         <li class="nav-item dropdown u-pro">
-                            <a class="btn btn-danger live-btn" href="file:///C:/Users/HP/Desktop/Graduation Project Website/main/index.html" aria-expanded="false"><span class="hide-menu"><b>Logout</b></span></a>
+                            <a class="btn btn-danger live-btn" href="/index.html" aria-expanded="false"><span class="hide-menu"><b>Logout</b></span></a>
                         </li>
                     </ul>
                 </div>
