--- a/html/admin-add new patient.html
+++ b/html/admin-add new patient.html
@@ -111,7 +111,7 @@
                         </li>
                         <li> <a class="waves-effect waves-dark" href="admin-add new machine.html" aria-expanded="false"><i class="fa fa-user-circle-o"></i><span class="hide-menu"><b>Add New Machine</b></span></a>
                         </li>
-                        <li> <a class="waves-effect waves-dark" href="admin-history.html" aria-expanded="false"><i class="fa fa-table"></i><span class="hide-menu"><b>Paitents Database</b></span></a>
+                        <li> <a class="waves-effect waves-dark" href="admin-history.html" aria-expanded="false"><i class="fa fa-table"></i><span class="hide-menu"><b>Database</b></span></a>
                         </li>
                     </ul>
 
