--- a/html/admin-history.html
+++ b/html/admin-history.html
@@ -85,7 +85,7 @@
             <!-- Profile -->
             <!-- ============================================================== -->
             <li class="nav-item dropdown u-pro">
-              <a class="btn btn-danger live-btn" href="file:///C:/Users/HP/Desktop/Graduation Project Website/main/index.html" aria-expanded="false"><span class="hide-menu"><b>Logout</b></span></a>
+              <a class="btn btn-danger live-btn" href="/index.html" aria-expanded="false"><span class="hide-menu"><b>Logout</b></span></a>
             </li>
           </ul>
         </div>
