--- a/html/admin-add new machine.html
+++ b/html/admin-add new machine.html
@@ -85,7 +85,7 @@
             <!-- Profile -->
             <!-- ============================================================== -->
             <li class="nav-item dropdown u-pro">
-              <a class="btn btn-danger live-btn" href="file:///C:/Users/HP/Desktop/Graduation Project Website/main/index.html" aria-expanded="false"><span class="hide-menu"><b>Logout</b></span></a>
+              <a class="btn btn-danger live-btn" href="/index.html" aria-expanded="false"><span class="hide-menu"><b>Logout</b></span></a>
             </li>
           </ul>
         </div>
@@ -111,7 +111,7 @@
             </li>
             <li> <a class="waves-effect waves-dark" href="admin-add new machine.html" aria-expanded="false"><i class="fa fa-user-circle-o"></i><span class="hide-menu"><b>Add New Machine</b></span></a>
             </li>
-            <li> <a class="waves-effect waves-dark" href="admin-history.html" aria-expanded="false"><i class="fa fa-table"></i><span class="hide-menu"><b>Paitents Database</b></span></a>
+            <li> <a class="waves-effect waves-dark" href="admin-history.html" aria-expanded="false"><i class="fa fa-table"></i><span class="hide-menu"><b>Database</b></span></a>
             </li>
           </ul>
 
