--- a/html/admin-history.html
+++ b/html/admin-history.html
@@ -349,7 +349,6 @@
               </div>
 
               <div id="Tokyo" class="tabcontent">
-                <h3>Machines</h3>
                 <div class="table-responsive">
                   <table class="table">
                     <thead>
@@ -380,7 +379,7 @@
                         <td>Raj</td>
                         <td>R45678</td>
                         <td>raj@hotmail.com	</td>
-                        <td>Bur Dubai</td>\
+                        <td>Bur Dubai</td>
                         <td style='font-size:20px'>&#10071;</td>
                       </tr>
                       <tr>
@@ -391,10 +390,6 @@
                         <td style='font-size:20px'>&#9940;</td>
                       </tr>
                       <tr>
-                        <td> </td>
-                        <td> </td>
-                        <td> </td>
-                        <td> </td>
                         <td> </td>
                         <td> </td>
                         <td> </td>
