--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <!-- Header part -->
         <!-- ============================================================== -->
         <header class="py-3 bg-light">
-            <div class="container">
+            <div class="container" >
                 <!-- Start Header -->
                 <div class="header">
              	<nav class="navbar navbar-expand-md navbar-light px-0">
-                <img src="assets/images/medisys-logo-main-no-tag-1.png"></img>
+                <img src="assets/images/medisys-logo-main-no-tag-1.png" style="max-width:100%; height: 40px; align: center;"></img>
 		</nav>
                 </div>
                 <!-- End Header -->
