--- a/html/admin.html
+++ b/html/admin.html
@@ -93,7 +93,7 @@
                         <!-- Profile -->
                         <!-- ============================================================== -->
                         <li class="nav-item dropdown u-pro">
-                            <a class="btn btn-danger live-btn" href="/index.html" aria-expanded="false"><span class="hide-menu"><b>Logout</b></span></a>
+                          <a class="btn btn-danger live-btn" href="/index.html" aria-expanded="false"><span class="hide-menu"><b>Logout</b></span></a>
                         </li>
                     </ul>
                 </div>
@@ -121,6 +121,9 @@
                         </li>
                         <li> <a class="waves-effect waves-dark" href="admin-history.html" aria-expanded="false"><i class="fa fa-table"></i><span class="hide-menu"><b>Database</b></span></a>
                         </li>
+                        <li> <a class="btn btn-light live-btn text-danger" onclick="myFunction()" aria-expanded="false"><i class="fa fa-gear" style="color:red;"></i><span class="hide-menu"><b>Manual Override</b></span></a>
+                        </li>
+                        <li> <p id="demo"></p> </li>
                     </ul>
                 </nav>
                 <!-- End Sidebar navigation -->
